<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = ".MainActivity">


    <ImageView
        android:id="@+id/speak"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="183dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="67dp"
        android:background="?selectableItemBackground"
        android:src="@android:drawable/ic_btn_speak_now" />

    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />


    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/footer"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/searchHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_toEndOf="@+id/searchInput"
        android:layout_toRightOf="@+id/searchInput"
        android:onClick="sendUserInput"
        android:text="@string/searchButton" />

    <Button
        android:id="@+id/gpsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_toEndOf="@+id/searchInput"
        android:layout_toRightOf="@+id/searchInput"
        android:onClick="sendUserGPS"
        android:text="@string/gpsButton" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/instructions" />

</RelativeLayout>